--- a/build.gradle
+++ b/build.gradle
@@ -237,7 +237,7 @@ opensearchplugin {
     classname "${projectPath}.${pathToPlugin}.${pluginClassName}"
     licenseFile rootProject.file('LICENSE')
     noticeFile rootProject.file('NOTICE')
-    extendedPlugins = ['opensearch-knn']
+    extendedPlugins = ['opensearch-jvector']
 }
 
 dependencyLicenses.enabled = false
@@ -246,15 +246,15 @@ loggerUsageCheck.enabled = false
 // No need to validate pom, as we do not upload to maven/sonatype
 validateNebulaPom.enabled = false
 
-def knnJarDirectory = "$buildDir/dependencies/opensearch-knn"
+def knnJarDirectory = "$buildDir/dependencies/opensearch-jvector"
 
 dependencies {
     api "org.opensearch:opensearch:${opensearch_version}"
     zipArchive group: 'org.opensearch.plugin', name:'opensearch-job-scheduler', version: "${opensearch_build}"
-    zipArchive group: 'org.opensearch.plugin', name:'opensearch-knn', version: "${opensearch_build}"
+    zipArchive group: 'org.opensearch.plugin', name:'opensearch-jvector', version: "${opensearch_build}"
     zipArchive group: 'org.opensearch.plugin', name:'opensearch-ml-plugin', version: "${opensearch_build}"
     secureIntegTestPluginArchive group: 'org.opensearch.plugin', name:'opensearch-security', version: "${opensearch_build}"
-    compileOnly fileTree(dir: knnJarDirectory, include: "opensearch-knn-${opensearch_build}.jar")
+    compileOnly fileTree(dir: knnJarDirectory, include: "opensearch-jvector-${opensearch_build}.jar")
     compileOnly group: 'com.google.guava', name: 'guava', version:'32.1.3-jre'
     compileOnly group: 'commons-lang', name: 'commons-lang', version: '2.6'
     api group: 'org.opensearch', name:'opensearch-ml-client', version: "${opensearch_build}"
@@ -280,14 +280,14 @@ dependencies {
     testFixturesImplementation "org.opensearch:common-utils:${version}"
     testFixturesImplementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.14.0'
     testFixturesCompileOnly group: 'com.google.guava', name: 'guava', version:'32.1.3-jre'
-    testFixturesCompileOnly fileTree(dir: knnJarDirectory, include: "opensearch-knn-${opensearch_build}.jar")
+    testFixturesCompileOnly fileTree(dir: knnJarDirectory, include: "opensearch-jvector-${opensearch_build}.jar")
 }
 
 // In order to add the jar to the classpath, we need to unzip the
 // k-NN zip and then copy it into a directory that we specify as a dependency.
 task extractKnnJar(type: Copy) {
     mustRunAfter()
-    from(zipTree(configurations.zipArchive.find { it.name.startsWith("opensearch-knn")}))
+    from(zipTree(configurations.zipArchive.find { it.name.startsWith("opensearch-jvector")}))
     into knnJarDirectory
 }
 
